--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
     "source-map-explorer": "^2.5.2"
   },
   "resolutions": {
-    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.0.0"
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.0.0",
+    "browserslist": "4.16.5",
+    "ansi-regex": "5.0.1",
+    "shell-quote": "1.7.3",
+    "set-value": "4.0.1",
+    "immer": "9.0.6"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
